# ppt-generator

./: .gitignore  CLAUDE.md  README.md  UPGRADE_RENDERER.md  pyproject.toml  requirements.txt
examples/: generate_sample.py  sample_deal_sourcing.json  sample_input.json
presets/default/: config.yaml
presets/fv/: config.yaml  deal_sourcing.yaml  idm.yaml  portfolio_report.yaml
src/: charts.py  composer.py  engine.py  primitives.py  renderer.py  styles.py  utils.py
tests/: test_composer.py  test_engine.py  test_primitives.py
